# council

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
council/: config.py  main.py
council/api/: routes.py
council/data/: default_members.py
council/database/: __init__.py  community_repository.py  connection.py  migrations.py  repository.py  schema.py
council/models/: __init__.py  agent.py  community.py  constitution.py  discussion.py  io_port.py  region.py  seat.py
council/services/: community.py  deliberation.py
council_mcp/: server.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentCard.jsx  ConstitutionBadge.jsx  ConstitutionEditor.jsx  CreateAgentForm.jsx  CreateIOPortForm.jsx  CreateRegionForm.jsx  Hemicycle.jsx  MemberCard.jsx  MemberPopover.jsx  Onboarding.jsx  RegionCard.jsx  SeatPopover.jsx  SettingsPanel.jsx  SidePanel.jsx  StatsBar.jsx
frontend/src/lib/: api.js  icons.js
frontend/src/store/: useStore.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
