[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "council"
version = "0.1.0"
description = "Agent Governance Council — visualize and manage agent regions, inputs, and outputs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["council*", "council_mcp*"]
