[package]
name = "council"
version = "0.1.0"
edition = "2021"

[lib]
name = "council_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = { version = "2", features = [] }
log = "0.4"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
